[gd_scene load_steps=5 format=3 uid="uid://bv1523pct8xvj"]

[ext_resource type="Script" uid="uid://qjyxv4ph0d8x" path="res://maptree/shop/shop.gd" id="1_oo08y"]
[ext_resource type="Texture2D" uid="uid://ccv4mjcslrhvy" path="res://maptree/TestButtons/Heart.png" id="2_vyb5m"]
[ext_resource type="FontFile" uid="uid://bkwyiy5jwrbfr" path="res://maptree/ui/font/Skynight.otf" id="3_c8h5d"]
[ext_resource type="Texture2D" uid="uid://didwnl4k3nq0d" path="res://maptree/TestButtons/GakiTestIconShell.png" id="4_nykwo"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oo08y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.24705882, 0.24705882, 0.50980395, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 100.0
offset_right = 681.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 65
text = "Shop"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(695, 330)
layout_mode = 0
offset_left = 50.0
offset_top = 200.0
offset_right = 745.0
offset_bottom = 542.0
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="RelictList" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(675, 310)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Row1" type="HBoxContainer" parent="PanelContainer/MarginContainer/RelictList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 142)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Row2" type="HBoxContainer" parent="PanelContainer/MarginContainer/RelictList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 142)
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 765.0
offset_top = 200.0
offset_right = 1095.0
offset_bottom = 611.0

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(330, 342)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RelictDescription" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="DetailIcon" type="TextureRect" parent="VBoxContainer/PanelContainer2/MarginContainer/RelictDescription"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_vyb5m")
expand_mode = 1

[node name="DetailName" type="Label" parent="VBoxContainer/PanelContainer2/MarginContainer/RelictDescription"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Name"
horizontal_alignment = 1

[node name="DetailDesc" type="RichTextLabel" parent="VBoxContainer/PanelContainer2/MarginContainer/RelictDescription"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_c8h5d")
theme_override_font_sizes/normal_font_size = 16
text = "Zus√§tzliches Leben"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/MarginContainer/RelictDescription"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DetailShellIcon" type="TextureRect" parent="VBoxContainer/PanelContainer2/MarginContainer/RelictDescription/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("4_nykwo")
expand_mode = 1

[node name="DetailCost" type="Label" parent="VBoxContainer/PanelContainer2/MarginContainer/RelictDescription/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "100"

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BuyButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "BUY"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 498.0
offset_top = 566.0
offset_right = 653.0
offset_bottom = 615.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Exit Shop"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
